# GenAI_projects

./: GenAI_Portfolio_Kapil_Gupta.md  README.md  README1.md
AIVideoProject_30sept/: AI Video Agent Runbook.md  README.md  Updated document to Install and build VideoAI agent.md  ai_video_agent.py  enhanced_ai_video_agent.py  fix_librosa.sh  hindi_script.txt  indian_ai_video_agent.py  indian_english_script.txt  mixed_script.txt  normalize_and_concat.sh  patch_wav2lip_audio.sh  setup_ubuntu_k8s.sh  simple_ai_video_agent.py
Deep Reasearch/: document.txt
Deep Research/: Deep research.ipynb
Infragpts/: Manage multiple K8s cluster from Central location  configk8sgptoutput.yaml.txt  k8sgpt analyze output.txt  k8sgpt_ollama_procedure.md  k8sgpt_ollama_procedure.txt  k8sgptclideployment yaml output.txt  k_8_sgpt_deployment_guide.md
Project Sales Email Automation/: ReadMe.txt  coldemail.ipynb
knowledge_bot_local22sept/: pyproject.toml
knowledge_bot_local22sept/docs/: connected_files.md  project_documentation.md
knowledge_bot_local22sept/knowledge/: user_preference.txt
knowledge_bot_local22sept/src/knowledge_bot/: Downloads - Shortcut.lnk  crew.py  main.py
knowledge_bot_local22sept/src/knowledge_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
knowledge_bot_local22sept/src/knowledge_bot/agents/: github_agent.py  query_agent.py
knowledge_bot_local22sept/src/knowledge_bot/config/: agents.yaml  tasks.yaml
knowledge_bot_local22sept/src/knowledge_bot/tools/: custom_tool.py
knowledge_bot_v25sept/: 1  IMPROVEMENT_PLAN.md  PROJECT_DOCUMENTATION.md  README.md  (+6 more)
(+61 files in other folders)
